--- a/home.css
+++ b/home.css
@@ -1,5 +1,5 @@
 body {
-    background-color: darkorchid;
+    background-color: cornflowerblue;
 }
 
 #blok{
@@ -8,5 +8,11 @@ body {
     margin-top: 8%;
     background-color: aliceblue;
     padding: 12%;
+    box-shadow: 5px 10px;
+    border-radius: 25px;
 }
 
+button {
+    color: greenyellow;
+    background-color: teal;
+}
